changing developer text and ico 🍧

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -102,7 +102,7 @@
     <string name="not_now">ليس الآن</string>
     <string name="public_roadmap">خارطة طريق Olauncher العامة</string>
     <string name="instagram">انستغرام</string>
-    <string name="twitter">تويتر</string>
+    <string name="developer">مطور</string>
     <string name="roadmap">خريطة الطريق</string>
     <string name="date">تاريخ</string>
     <string name="date_only">التاريخ فقط</string>
