--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -104,7 +104,7 @@
     <string name="not_now">Nicht jetzt</string>
     <string name="public_roadmap">Öffentliche Olauncher-Roadmap</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Entwickler</string>
     <string name="roadmap">Roadmap</string>
     <string name="date">Datum</string>
     <string name="date_only">Nur Datum</string>
