--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -71,7 +71,7 @@
     <string name="not_now">Ahora no</string>
     <string name="public_roadmap">Hoja de ruta pública de Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Desarrollador</string>
     <string name="roadmap">Hoja de ruta</string>
     <string name="date">Fecha</string>
     <string name="date_only">Solo fecha</string>
