--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -70,7 +70,7 @@
     <string name="not_now">Plus tard</string>
     <string name="public_roadmap">Feuille de route publique d\'Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Développeur</string>
     <string name="roadmap">Feuille de route</string>
     <string name="date">Date</string>
     <string name="date_only">Date uniquement</string>
