--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -70,7 +70,7 @@
     <string name="not_now">Tidak sekarang</string>
     <string name="public_roadmap">Peta jalan publik Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Developer</string>
     <string name="roadmap">Peta jalan</string>
     <string name="date">Tanggal</string>
     <string name="date_only">Tanggal saja</string>
