--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -71,7 +71,7 @@
     <string name="not_now">Non ora</string>
     <string name="public_roadmap">Roadmap pubblica di Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Sviluppatore</string>
     <string name="roadmap">Roadmap</string>
     <string name="date">Data</string>
     <string name="date_only">Solo data</string>
