--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -71,7 +71,7 @@
     <string name="not_now">Inte nu</string>
     <string name="public_roadmap">Olaunchers offentliga färdplan</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Utvecklare</string>
+    <string name="developer">Utvecklare</string>
     <string name="roadmap">Färdplan</string>
     <string name="date">Datum</string>
     <string name="date_only">Endast datum</string>
