--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -104,7 +104,7 @@
     <string name="not_now">Şimdi değil</string>
     <string name="public_roadmap">Olauncher genel yol haritası</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Geliştirici</string>
     <string name="roadmap">yol haritası</string>
     <string name="date">Tarih</string>
     <string name="date_only">Yalnızca tarih</string>
