--- a/app/src/main/res/values-es-rUS/strings.xml
+++ b/app/src/main/res/values-es-rUS/strings.xml
@@ -70,7 +70,7 @@
     <string name="not_now">Ahora no</string>
     <string name="public_roadmap">Objetivos de Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Desarrollador</string>
     <string name="roadmap">Objetivos</string>
     <string name="date">Fecha</string>
     <string name="date_only">Sólo fecha</string>
