--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -69,7 +69,7 @@
     <string name="close">Zatvori</string>
     <string name="public_roadmap">Javni plan razvoja Olaunchera</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Programer</string>
     <string name="roadmap">Plan razvoja</string>
     <string name="date">Datum</string>
     <string name="date_only">Samo datum</string>
