--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -73,7 +73,7 @@
     <string name="not_now">Később</string>
     <string name="public_roadmap">Olauncher nyilvános ütemterv</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">A fejlesztő</string>
+    <string name="developer">Fejlesztő</string>
     <string name="roadmap">Ütemterv</string>
     <string name="date">Dátum</string>
     <string name="date_only">Csak dátum</string>
