--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -103,7 +103,7 @@
     <string name="not_now">今はやめろ</string>
     <string name="public_roadmap">Olauncher の公開ロードマップ</string>
     <string name="instagram">インスタグラム</string>
-    <string name="twitter">ツイッター</string>
+    <string name="developer">デベロッパー</string>
     <string name="roadmap">ロードマップ</string>
     <string name="date">日にち</string>
     <string name="date_only">日付のみ</string>
