--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -102,7 +102,7 @@
     <string name="not_now">Nie teraz</string>
     <string name="public_roadmap">Publiczna mapa drogowa Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Deweloper</string>
     <string name="roadmap">Mapa drogowa</string>
     <string name="date">Data</string>
     <string name="date_only">Tylko data</string>
