--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -71,7 +71,7 @@
     <string name="not_now">Не зараз</string>
     <string name="public_roadmap">Публічна дорожня карта Olauncher</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Twitter</string>
+    <string name="developer">Pозробник</string>
     <string name="roadmap">Дорожня карта</string>
     <string name="date">Дата</string>
     <string name="date_only">Толільки дата</string>
