--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -104,7 +104,7 @@
     <string name="not_now">暂时不要</string>
     <string name="public_roadmap">Olauncher 公共路线图</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">推特</string>
+    <string name="developer">开发商</string>
     <string name="roadmap">路线图</string>
     <string name="date">日期</string>
     <string name="date_only">仅限日期</string>
