--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="not_now">Not now</string>
     <string name="public_roadmap">Olauncher public roadmap</string>
     <string name="instagram">Instagram</string>
-    <string name="twitter">Developer</string>
+    <string name="developer">Developer</string>
     <string name="roadmap">Roadmap</string>
     <string name="date">Date</string>
     <string name="date_only">Date only</string>
